--- a/Proyecto2/src/myapp/src/Views/StyleUsuario.css
+++ b/Proyecto2/src/myapp/src/Views/StyleUsuario.css
@@ -15,7 +15,8 @@
     left:0;
     width:250px;
     height:100%;
-    background-color:chocolate;
+    background-color:rgba(0, 0, 255, 0.324);
+    cursor: grab;
 }
 
 .slidebar header{
@@ -36,8 +37,9 @@
     color:white;
     padding-left: 40px;
     box-sizing: border-box;
-    border-top: 1px solid green;
-    border-bottom: 1px solid black;
+    border-top: 1px solid rgb(6, 0, 113);
+    border-bottom: 2px solid black;
+    --border-radius: 8px;
     transition: .3s;
     margin-right: 16px;
 }
@@ -46,3 +48,12 @@ ul li:hover {
     padding-left: 50px;
 }
 
+#foto_preview{
+    position: relative;
+    left: 30%;
+    background-color: aqua;
+    height: 70px;
+    width:auto;
+    border-radius: 50%;
+
+}
